--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,24 @@
-spring.devtools.restart.enabled=true
-spring.devtools.restart.additional-paths=src/main/java
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+#spring.devtools.restart.enabled=true
+#spring.devtools.restart.additional-paths=src/main/java
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
 #database config
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=true&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://localhost:3307/yqWeb?useSSL=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.password=981125nn
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#
+#mybatis.type-aliases-package=com.yqcui.yqweb.entity
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-mybatis.type-aliases-package=com.yqcui.yqweb.entity
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 #spring.mvc.static-path-pattern=images/**
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
