remove maven version

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
 <!--                <version>${project.parent.version}</version>-->
-                <version>3.0.5</version>
+<!--                <version>3.0.5</version>-->
             </plugin>
         </plugins>
     </build>
